--- a/Michael Jackson Biography.html
+++ b/Michael Jackson Biography.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <title>Michael Jackson Biography</title>
     <link rel="stylesheet" href="michael.css">
+    <style>
+        body {
+            background-image: url(130424154750-michael-jackson.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
     <div class="align">
