--- a/Michael Jackson Biography.html
+++ b/Michael Jackson Biography.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="michael.css">
     <style>
         body {
-            background-image: url(130424154750-michael-jackson.jpg);
+            background-image: url(Red-cool-background.jpg);
             background-repeat: no-repeat;
             background-size: cover;
         }
@@ -16,7 +16,7 @@
     <div class="align">
     <h1>Michael Jackson</h1>
     <p class="date">Aug 29, 1958 - Jun 25, 2009</p>
-    <img class="img" src="200w.gif"/>
+    <img class="img" src="michael-jackson-silhouette-png-2.png"/>
     </div>
 
     <section>
