added jump to elements

--- a/Michael Jackson Biography.html
+++ b/Michael Jackson Biography.html
@@ -13,6 +13,11 @@
     </style>
 </head>
 <body>
+    <nav>
+        <a href="#biography">Biography</a>
+        <a href="#accomplishments">Accomplishments</a>
+        <a href="#awards">Awards</a>
+    </nav>
     <div class="align">
     <h1>Michael Jackson</h1>
     <p class="date">Aug 29, 1958 - Jun 25, 2009</p>
@@ -20,7 +25,7 @@
     </div>
 
     <section>
-    <h2>Biography</h2>
+    <h2 id="biography">Biography</h2>
     <p>Michael Jackson, full name Michael Joseph Jackson, was an American singer, songwriter, and dancer who was the most well-known entertainer in the world in the early and middle of the 1980s. He was born on August 29, 1958, in Gary, Indiana, and passed away on June 25, 2009, in Los Angeles, California.
         Michael Jackson was the youngest and most brilliant of five brothers that his father, Joseph, developed into the glittering group of young stars known as the Jackson 5. He was raised in Gary, Indiana, in one of the most renowned musical families of the rock period.
         The other members of the Jackson 5 were Jackie Jackson, Tito Jackson, Jermaine Jackson and Marlon Jackson. </p>
@@ -28,7 +33,7 @@
 
     
         <section>
-        <h2>Accomplishments</h2>
+        <h2 id="accomplishments">Accomplishments</h2>
             <div>
             <p>Off the Wall, Jackson's first solo album for Epic, defied all expectations and went on to sell more than 20 million copies, making it the year's best-selling album. Off the Wall featured the massive international hit singles "Don't Stop 'til You Get Enough" and "Rock with You," both of which showcased Michael's energetic style and capitalized on the contemporary disco dance fad. Off the Wall was produced by industry veteran Quincy Jones. </p>
             </div>
@@ -40,7 +45,7 @@
         
 
         <section>
-            <h3>Awards</h3>
+            <h3 id="awards">Awards</h3>
             <ul>
                 <li>Grammy Award (1979)</li> 
                 <li>Grammy Award (1983)</li> 
