--- a/Michael Jackson Biography.html
+++ b/Michael Jackson Biography.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <nav>
+        <a href="index.html">Homepage</a>
         <a href="#biography">Biography</a>
         <a href="#accomplishments">Accomplishments</a>
         <a href="#awards">Awards</a>
